--- a/songbird/src/assets/styles/sass/style.scss
+++ b/songbird/src/assets/styles/sass/style.scss
@@ -7,6 +7,7 @@
 @import "base/normalize";
 @import "base/base";
 @import "base/button";
+@import "base/nav";
 
 //components
 @import "components/header";
