feat: add content in main section

--- a/songbird/src/assets/styles/sass/abstract/_constants.scss
+++ b/songbird/src/assets/styles/sass/abstract/_constants.scss
@@ -1,6 +1,6 @@
 //colors
 $color-white: white;
-$color-gray: rgb(124, 124, 124);
+$color-main: rgb(99 101 112 / 69%);
 
 //Width
-$content-width: 1100px;
+$content-width: 1300px;
