--- a/songbird/src/assets/styles/sass/base/_base.scss
+++ b/songbird/src/assets/styles/sass/base/_base.scss
@@ -4,11 +4,19 @@ html {
 
 body {
   @extend %font-main;
-  @include font(1.4rem, 1.4, 500);
-  background-color: $color-gray;
+  @include font(1.6rem, 1.4, 500);
+  background-color: $color-main;
 }
 
 h1 {
-  @include font(1.4rem, 0.8, 700);
+  @include font(1.8rem, 0.8, 700);
   padding-top: 30px;
+}
+
+h2 {
+  @include font(1.8rem, 0.8, 700);
+}
+
+p {
+  @include font(1.8rem, 0.8, 500);
 }
