fix: add link on button

--- a/songbird/src/assets/views/about.html
+++ b/songbird/src/assets/views/about.html
@@ -19,5 +19,5 @@
       следующему вопросу;</li>
     <li class="main__list">после последнего вопроса выводится страница с результатами игры;</li>
   </ul>
-  <button class="button main__button">Начать Викторину</button>
+  <button class="button main__button"><a href="#quiz">Начать Викторину</a></button>
 </div>
