feat: implement template for quiz page

--- a/songbird/src/assets/styles/sass/style.scss
+++ b/songbird/src/assets/styles/sass/style.scss
@@ -13,6 +13,7 @@
 @import "components/header";
 @import "components/main";
 @import "components/footer";
+@import "components/quiz";
 
 //layout
 @import "layout/wrapper";
