fix: change styles for quiz page

--- a/songbird/src/assets/styles/sass/style.scss
+++ b/songbird/src/assets/styles/sass/style.scss
@@ -8,6 +8,7 @@
 @import "base/base";
 @import "base/button";
 @import "base/nav";
+@import "base/img";
 
 //components
 @import "components/header";
