fix: delete link in quiz section

--- a/songbird/src/assets/views/quiz.html
+++ b/songbird/src/assets/views/quiz.html
@@ -1,12 +1,12 @@
 <div class="quiz-title">
   <h2 class="quiz-title__text">Score: <span class="quiz-title__score">0</span></h2>
   <ul class="quiz-list">
-    <li class="quiz-item"><a class="quize-link" href="/#">Разминка</a></li>
-    <li class="quiz-item"><a class="quiz-link" href="/#">Воробьиные</a></li>
-    <li class="quiz-item"><a class="quiz-link" href="/#">Лесные птицы</a></li>
-    <li class="quiz-item"><a class="quiz-link" href="/#">Певчие птицы</a></li>
-    <li class="quiz-item"><a class="quiz-link" href="/#">Хищные птицы</a></li>
-    <li class="quiz-item"><a class="quiz-link" href="/#">Морские птицы</a></li>
+    <li class="quiz-item active" id="0">Разминка</li>
+    <li class="quiz-item" id="1">Воробьиные</li>
+    <li class="quiz-item" id="2">Лесные птицы</li>
+    <li class="quiz-item" id="3">Певчие птицы</li>
+    <li class="quiz-item" id="4">Хищные птицы</li>
+    <li class="quiz-item" id="5">Морские птицы</li>
   </ul>
 </div>
 <div class="quiz-random-bird">
