--- a/songbird/src/assets/styles/sass/style.scss
+++ b/songbird/src/assets/styles/sass/style.scss
@@ -14,6 +14,7 @@
 @import "components/header";
 @import "components/main";
 @import "components/footer";
+@import "components/about";
 @import "components/quiz";
 
 //layout
