--- a/songbird/src/assets/views/about.html
+++ b/songbird/src/assets/views/about.html
@@ -1,23 +1,23 @@
-<div id="app" class="main__content">
-  <h2 class="main__title">Добро пожаловать на викторину!</h2>
-  <p class="main__text">В данной викторине вам предстоит выбирать птиц согласно их пения</p>
+<div id="app" class="about__content">
+  <h2 class="about__title">Добро пожаловать на викторину!</h2>
+  <p class="about__text">В данной викторине вам предстоит выбирать птиц согласно их пения</p>
   <ul>
-    <li class="main__list">в начале игры у вас будет 0 баллов;</li>
-    <li class="main__list">при нажатии по варианту ответа с названием птицы, в блоке с описанием птицы будет
+    <li class="about__list">в начале игры у вас будет 0 баллов;</li>
+    <li class="about__list">при нажатии по варианту ответа с названием птицы, в блоке с описанием птицы будет
       выведена информация о ней;
     </li>
-    <li class="main__list">если дан правильный ответ с первой попытки, счёт увеличивается на 5 баллов;
+    <li class="about__list">если дан правильный ответ с первой попытки, счёт увеличивается на 5 баллов;
     </li>
-    <li class="main__list">если выбран правильный ответ, в блоке с вопросом будет выведено название и
+    <li class="about__list">если выбран правильный ответ, в блоке с вопросом будет выведено название и
       изображение птицы, учитывайте, что каждая
       следующая попытка даёт на один балл меньше, если правильный ответ дан только с последней попытки, вы
       получите 0 баллов;</li>
-    <li class="main__list">баллы за все вопросы суммируются;</li>
-    <li class="main__list">правильные и неправильные ответы имеют звуковое и цветовое сопровождение;</li>
-    <li class="main__list">если дан правильный ответ, активируется кнопка "Дальше" и появляется
+    <li class="about__list">баллы за все вопросы суммируются;</li>
+    <li class="about__list">правильные и неправильные ответы имеют звуковое и цветовое сопровождение;</li>
+    <li class="about__list">если дан правильный ответ, активируется кнопка "Дальше" и появляется
       возможность перейти к
       следующему вопросу;</li>
-    <li class="main__list">после последнего вопроса выводится страница с результатами игры;</li>
+    <li class="about__list">после последнего вопроса выводится страница с результатами игры;</li>
   </ul>
-  <button class="button main__button"><a href="#quiz">Начать Викторину</a></button>
+  <button class="button about__button"><a href="#quiz">Начать Викторину</a></button>
 </div>
