feat: add custom audio-player to project

--- a/songbird/src/assets/styles/sass/style.scss
+++ b/songbird/src/assets/styles/sass/style.scss
@@ -9,6 +9,7 @@
 @import "base/button";
 @import "base/nav";
 @import "base/img";
+@import "base/audio-player";
 
 //components
 @import "components/header";
