--- a/songbird/src/assets/styles/sass/base/_base.scss
+++ b/songbird/src/assets/styles/sass/base/_base.scss
@@ -5,6 +5,8 @@ html {
 body {
   @extend %font-main;
   @include font(1.6rem, 1.4, 500);
+  display: flex;
+  flex-direction: column;
   background-color: $color-main;
 }
 
