--- a/songbird/src/assets/views/quiz.html
+++ b/songbird/src/assets/views/quiz.html
@@ -1,12 +1,12 @@
 <div class="quiz-title">
-  <h2 class="quiz-title__text">Score: <span class="quiz-title__score">00</span></h2>
+  <h2 class="quiz-title__text" data-lang="score">Score:<span class="quiz-title__score">00</span></h2>
   <ul class="quiz-list">
-    <li class="quiz-item active" id="0">Разминка</li>
-    <li class="quiz-item" id="1">Воробьиные</li>
-    <li class="quiz-item" id="2">Лесные птицы</li>
-    <li class="quiz-item" id="3">Певчие птицы</li>
-    <li class="quiz-item" id="4">Хищные птицы</li>
-    <li class="quiz-item" id="5">Морские птицы</li>
+    <li class="quiz-item active" id="0" data-lang="item1">Разминка</li>
+    <li class="quiz-item" id="1" data-lang="item2">Воробьиные</li>
+    <li class="quiz-item" id="2" data-lang="item3">Лесные птицы</li>
+    <li class="quiz-item" id="3" data-lang="item4">Певчие птицы</li>
+    <li class="quiz-item" id="4" data-lang="item5">Хищные птицы</li>
+    <li class="quiz-item" id="5" data-lang="item6">Морские птицы</li>
   </ul>
 </div>
 <div class="quiz-random-bird">
@@ -14,9 +14,9 @@
 <div class="answer-options">
   <div class="answer-options__container">
   </div>
-  <div class="answer-options__container">
+  <div class="answer-options__container container-description">
   </div>
   <div class="answer-options__button button-container">
-    <button class="btn" id="btn-next" disabled>Next Level</button>
+    <button class="btn" id="btn-next" data-lang="nextQuestion" disabled>Следующий вопрос</button>
   </div>
 </div>
