--- a/songbird/src/assets/styles/sass/components/_footer.scss
+++ b/songbird/src/assets/styles/sass/components/_footer.scss
@@ -19,8 +19,18 @@
 }
 
 .footer__designed {
+  @extend %transition;
   display: flex;
   align-items: center;
+  color: $color-white;
+
+  &:hover {
+    color: #008966;
+  }
+}
+
+.designed__text {
+  color: inherit;
 }
 
 .designed__img {
