--- a/songbird/src/assets/views/about.html
+++ b/songbird/src/assets/views/about.html
@@ -21,6 +21,6 @@
       следующему вопросу;</li>
     <li class="about__list" data-lang="aboutList7">после последнего вопроса выводится страница с результатами игры;</li>
   </ul>
-  <button class="button about__button"><a href=" #quiz" data-lang="aboutButton">Начать
+  <button class="btn about__btn"><a href=" #quiz" data-lang="aboutButton" class="about__btn-link">Начать
       Викторину</a></button>
 </div>
