--- a/songbird/src/assets/styles/sass/base/_nav.scss
+++ b/songbird/src/assets/styles/sass/base/_nav.scss
@@ -1,8 +1,68 @@
 .nav {
   display: flex;
-  justify-content: space-evenly;
+  //justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  height: 55px;
-  gap: 4vw;
+  border-radius: 5px;
+  overflow: hidden;
+  //column-gap: 1em;
+
+  @include media-tablet {
+    //column-gap: 2em;
+  }
+}
+
+.nav__link {
+  @extend %transition;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $color-white;
+  background-color: #008966;
+  border-color: #007c5d;
+  user-select: none;
+  height: 2em;
+
+  &:not(:last-child) {
+    flex-grow: 1;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: #105342;
+    border-color: #105342;
+  }
+}
+
+.link {
+  @extend %transition;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $color-white;
+  width: 8em;
+
+  &:visited {
+    background-color: #303030;
+  }
+
+  @include media-tablet {
+    width: 10em;
+  }
+}
+
+.link__about {}
+
+.link__quiz {}
+
+.link__result {}
+
+.link__gallery {}
+
+.nav__language {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3em;
+  color: $color-white;
 }
