--- a/songbird/src/assets/styles/sass/components/_about.scss
+++ b/songbird/src/assets/styles/sass/components/_about.scss
@@ -17,20 +17,38 @@
   padding: 20px 0;
 }
 
-.about__button {
+.about__btn {
+  @extend %transition;
   display: block;
   @include font(1.6rem, 0.8, 500);
   margin: 0 auto;
   min-width: 200px;
   height: 40px;
   border-radius: 5px;
-  background-color: #919191;
+  background-color: -internal-light-dark(rgba(239, 239, 239, 0.3), rgba(19, 1, 1, 0.3));
+  color: -internal-light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
+
+  &:hover {
+    background-color: #008966;
+    color: $color-white;
+  }
+}
+
+.about__btn-link {
+  display: inline-flex;
+  height: 100%;
+  width: 100%;
+  color: inherit;
+  justify-content: center;
+  align-items: center;
 }
 
 .about__list {
   @include font(1.6rem, 1.4, 500);
   list-style: disc;
+  list-style-position: inside;
   padding-bottom: 10px;
+
   &:last-child {
     padding-bottom: 15%;
   }
