--- a/songbird/src/assets/styles/sass/style.scss
+++ b/songbird/src/assets/styles/sass/style.scss
@@ -17,6 +17,7 @@
 @import "components/footer";
 @import "components/about";
 @import "components/quiz";
+@import "components/result";
 
 //layout
 @import "layout/wrapper";
