--- a/songbird/src/assets/styles/sass/style.scss
+++ b/songbird/src/assets/styles/sass/style.scss
@@ -18,6 +18,7 @@
 @import "components/about";
 @import "components/quiz";
 @import "components/result";
+@import "components/gallery";
 
 //layout
 @import "layout/wrapper";
